# vector_field_landing

./: CMakeLists.txt  LICENSE  README.md  package.xml
cmd/: cli_cmd.txt  vf_params.txt
config/: arducam_param.yaml  elp_param.yaml  settings.yaml  siyi_a8_mini.yaml  tags.yaml
data/: pid_tuning_results_sample.txt
include/aims_als/: decision_maker.hpp  pos_ctrl.hpp  tag_esti.hpp
include/aims_als/exp/: pid_tuner.hpp
include/aims_als/lib/: filter.h  math.h  uav.h
include/aims_als/test/: pos_ctrl_old.hpp  tag_repub.hpp  tag_tf.hpp
include/vector_field_landing/: decision_maker.hpp  pos_ctrl.hpp  tag_esti.hpp
include/vector_field_landing/exp/: pid_tuner.hpp
include/vector_field_landing/lib/: lkf.h  uav.h  util.h
include/vector_field_landing/test/: pos_ctrl_old.hpp  tag_repub.hpp  tag_tf.hpp
launch/: controller.launch  decision_making.launch  perception.launch  real_world.launch
launch/exp/: gain_tuner.launch  steep_angle_exp.launch
launch/sitl/: gvf.launch  lkf_tuning.launch  sitl.launch  sitl_controller.launch  sitl_perception.launch
models/FRACTAL_4L_6/: model.config  model.sdf
models/FRACTAL_4L_6/materials/scripts/: FRACTAL_4L_6.material
msg/: ImgWithHeader.msg  Marker.msg
scripts/: gimbal_ctrl.py  led_ctrl.py  video_writer.py
scripts/sitl/: gv_ctrl.py
scripts/test/: gimbal_test.py  video_stream.py
src/: decision_maker.cpp  fractal_detection.cpp  img_pub.cpp  pos_ctrl.cpp  pos_ctrl_old.cpp  siyi_img_pub.cpp  tag_esti.cpp
src/exp/: pid_tuner.cpp  steep_angle_exp.cpp
src/sitl/: guidance.cpp
src/test/: aruco_test.cpp  opencv_version_test.cpp  pos_ctrl_old.cpp  tag_repub.cpp  tag_tf.cpp  tmp_esti.cpp
start/: .tmuxinator.yml  aims_start.sh  gain_tuning.yml  hover_thrust_estimate_test.yml  sitl_start.sh  steep_angle_exp.yml  tracking.yml
urdf/: ground_platform.urdf  ugv_apriltags.urdf
worlds/: ground_platform.world  multi_apriltags.world
